[package]
name = "bswp-cli"
version = "0.1.0"
authors = ["PicoJr <PicoJr@notanemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bswp = "1.0.0"
clap = "2.33.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "0.12"
